--- a/QLVanChuyen_App/views/DashBoard.resx
+++ b/QLVanChuyen_App/views/DashBoard.resx
@@ -143,24 +143,22 @@
         eew5v3Y/gDe9Ha4dWNyslsO38w6e4mubx7fhLyBvxNrRkFbrLwsmwVZNhnaBAAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="label13.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="label15.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
-        kAAAAJABhkKK/QAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAGjSURBVEhLpdbN
-        K0RRGMfxY8rbRjMlG4UsbcjCzt7GEqVkaZJJYhBjzcaGJIyXSFnK1lb+BgukLLwkiWIj4/tMZ6bnnrlz
-        O8ZTH53zO+eeZ9w7M43J5XIlqCrU/UN18Sx9cD4wZgY3kEmlvrGDJvfwbtyiQ+e+qAusyvU4RtbdsIJl
-        nfmiGvGJOjtvxbu7aQ1LOvNFteFNzeMo2bSOjB13IukYRUxfU0B5NdjAgh2P4MSxjwZ9TQHl1WAT8zrz
-        RXk12MKsznxRXg22kbbjIRx46LH7vRpkMW3HXXAfcphmu18afECuE70oabCHKZ35oqTBD+6Uc3eT/MuT
-        OvNFBW5RMQ9MjDlEyo4XoV9NOf12v1eDI0zYsTykwv2MUmv3ezWQL6hxnfmiwhtQCbsoziC3pjAvpyXk
-        IMlDG7zgCY9/8IVB56CyDeRv3F2IQsm7LelkkQ0S7kIUaheBZ0W141VnNjfXGHAXolDyNXLqZClc6szm
-        Jo0r9LmL5VA1eMAc5O0sDe8xHLLXxJDBMySphHzgxtzD8w0CE2PqEfYzJJI+IyhnfgEuGBa/w9sS9gAA
-        AABJRU5ErkJggg==
+        gwAAAIMBYu+7WgAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAE8SURBVEhL5dW9
+        LgVBAIbhbVBoXILCpUiIUNFwFVRapSgkiI7mULkJhQvwk+hUfgoSCVEQP+F995hkbIxdYzV8yZPsmbMz
+        X/ac2UxBxnCH12+4xRYGUJsznOAYD3CBexxiB0tYrFiH93ZQGxdc6F4WfZiAE2/gd1fvY9WswntqExfE
+        CWX7OHegEuc4tzapgpDUQn+vYBAXmCo/RcktmIY7LaQXe3jCh5Lcgs/Sj108Y8YBk1MwhOGEcRzgBXPI
+        KvC3dqyOT1Je/NYTzCKrIJX4P3ATlMktcIGj7mUZ33x30SNa2UXV8fAeTJaforRVkMz/LVjDj86DkGV4
+        z3xkBY1PNP95DxUPF7daNR6bFsQ8k1280Znswh6LTvSRnRiXNf6tv0oPRrGJa4SybfgynaK1WDaCDVzC
+        xS3PSFG8AYJ0nSaR/g6iAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="label6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
-        rAAAAKwBhgk01AAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAIASURBVEhLrdZN
+        qAAAAKgBefSzxgAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAIASURBVEhLrdZN
         SxVRHMfxKSvtQRJbKEFtJCWrnbqSCCRaGUW0iXARJIRQC602CdGqaKXixigQN1oiQc8PVLoLegu9gha+
         Bb/f6R4699zbdG/jDz5y53Dn/59znDlzswazAxfwrsLPjpXOToziPe6jAwdwCx8xhl1oOrtxDd/wEqs4
         iTj7cBNf4Hc9559pwwR+4i32whzDE6xgwIEoe3AdNvJca9RkP5z2OsbhUsTHYRmOYgYuz4gDUVzOy3DW
@@ -190,7 +188,7 @@
   <data name="label4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
-        rAAAAKwBhgk01AAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAF3SURBVEhL3dS/
+        qAAAAKgBefSzxgAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAF3SURBVEhL3dS/
         K0VhHMfxQywoC5PNIgtCIWIwMJGFTaEkmZDBYjGxKQNGReEfMCC/SvkZZTMYZbZ7v++953a73V+uewc+
         9ep87z3Pc77nPs89J/gXqURbHhqRU26wg60fOsYcsuYOLXDSEIZjdSbr8FdYZ40NKuCEGtTG6kxcHo8X
         mE4yghLEY4N8ktjgPXbULmYRz28ahEuUeI1qPCL+KwrdwGyjP1oWp0EzjqJlcRqYS9RZFKvBOFYsCtHA
@@ -203,7 +201,7 @@
   <data name="label3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
-        rAAAAKwBhgk01AAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAGcSURBVEhLzdXL
+        qAAAAKgBefSzxgAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAGcSURBVEhLzdXL
         KwVhHMbxE5FcsnPJgqIoiuyxFnYWwtZlpdwtrJSllCUlZYOFiL/CZUFkJVm4Lqzkfvs+v+aoczrmvHPm
         LDz1qfm9552ZM/NeJuKQPExgD48eHY8jF6FShwu8Yg0jnnWv7Ry1SClluMERKtUQlyoc4wqlagiaVdyi
         2KrEKcEdVqwKkELoFYxa5R+NxQsKrHJMC77h8n41TurbbJVjOqCTNA7Joj7q226VYxqhk5qs8k/0aRus
@@ -217,13 +215,56 @@
   <data name="label2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
-        rAAAAKwBhgk01AAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAFPSURBVEhL7dS/
+        qAAAAKgBefSzxgAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAFPSURBVEhL7dS/
         K0VxGMfxQ4gSFoNFJBaTMtlIEevdmCxsBv+A0Woxi0R2RbHJIBuhLAaSDMoiP4r3+55zi3PPud1f6Q4+
         9eo+9/menu89555zglpKPZYi1lVNF47wHLG2V5WM4wGn6EM3jvGEaZSdBizjE6toQi6F1opKD07wiEkb
         KRnFPc7Qb6OYZOB1PkQx17kTe3jBrI20tMDT/YCnX8qdUodFvGEDrfiVQZzjFiM2yswwbnCNIRtmAa/Y
         RpuNCuMMZzlz3sYB5ixIY/RZSXIznLkflmGmcBGWFcUZzsrLDO7CMjX+Op+BQnGGs/JSaIMObMLrKu+U
         diSlrA380y4xEbnCFpJS8gbNeIdPbS5j8J53LZ6SN/Dl9oXe7Lcw1vZci+d/g2xqdwNfuSsxa0jbwLX4
         8c5I3GAAO9hNsI6ft6S1vaRjneGsv0gQfAM08mZJDrRRewAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="label18.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        iQAAAIkBOZtwtgAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAHXSURBVEhL7dTN
+        S1RRGMfxmy+gqbhLsnQlkRFuWuRGFyG4qSAplZAgSSra2NsiwoVBKFouLZBEiDYVgSJYKUKURbZt3ar+
+        j77fe7jTnTsvTDDL+cEHHu+M957znOdOVEs1cwrTuIajXqhmFvEaFzGJL7iAquQ8lkOZSxP2cCj+K+QA
+        mkNZPAfxFK7uIwZgVnAilHm5jUuhjK7jB3awhSMoyAtcDWXUgc/ogdd7kY3nMYrTeIsGmH6sh/Jf6uDK
+        0xnBXdj3JS+k0ggXcBgPcBbpeC9blpfvSFZhbmAqlNEzrGIYtmUXl2HG8TCUcdrh+RTkFl7BLU7gG9qQ
+        ZBAzsPe2Lkk9NvAEN+HOXEjRDMF23IMrMa24j09w67L2Oy0wttj/dWFdXiiWY5jDOzxHcoBOh7Of3MxY
+        +8L52TmswQe766+wG+4sF/u9D7fmbPfBvv9GJ0rFcfwDzyGJ78IC3iB+yBl8gJORjjN9PJRl4zvie5ON
+        D3En0Xt0W6TiDl6GsqI4HCdDmYs7iUffnmXjkz2wSnMFTlA28bgWm9lHcCoqjd+dDWVe4nv/xHyGH/zP
+        r+UYfmE7YxPxJLiCNCfIkc1eL+UxfAErjgd0B9mdleJ3y/5U11IiUfQXc1laS7Wt4sUAAAAASUVORK5C
+        YII=
+</value>
+  </data>
+  <data name="label17.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        qAAAAKgBefSzxgAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAF3SURBVEhL3dS/
+        K0VhHMfxQywoC5PNIgtCIWIwMJGFTaEkmZDBYjGxKQNGReEfMCC/SvkZZTMYZbZ7v++953a73V+uewc+
+        9ep87z3Pc77nPs89J/gXqURbHhqRU26wg60fOsYcsuYOLXDSEIZjdSbr8FdYZ40NKuCEGtTG6kxcHo8X
+        mE4yghLEY4N8ktjgPXbULmYRz28ahEuUeI1qPCL+KwrdwGyjP1oWp0EzjqJlcRqYS9RZFKvBOFYsCtHA
+        f1Mf/C7UDTe7IA2sN+HnRB8oSINU8Y3wafGMGYQPSq5WET5ok2hHYnwjvFqcYAlvOMA8rnGK5IsmO8MV
+        nHOIDYSZwpfFPQbhxcfgpE64Qb7K06UKjumCc0bhf78VphSuTjAABy7Au/ZNuYZ9vMA9SsVze3C8XIlF
+        uBKev8UyIqnHObxzB/skPqEM6eI5xzTBOR3w4fJaKeNGPcA799iDbOlFOMdVmEDGuOYNKI98yi2OdU6m
+        /fqzCYJvKFt1r1yQQUEAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="label16.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        qAAAAKgBefSzxgAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAIASURBVEhLrdZN
+        SxVRHMfxKSvtQRJbKEFtJCWrnbqSCCRaGUW0iXARJIRQC602CdGqaKXixigQN1oiQc8PVLoLegu9gha+
+        Bb/f6R4699zbdG/jDz5y53Dn/59znDlzswazAxfwrsLPjpXOToziPe6jAwdwCx8xhl1oOrtxDd/wEqs4
+        iTj7cBNf4Hc9559pwwR+4i32whzDE6xgwIEoe3AdNvJca9RkP5z2OsbhUsTHYRmOYgYuz4gDUVzOy3DW
+        LudB5PHqfmESfilOmJFX51V6taYbj/EaZx2IYg1rWdPa2Rk8wzKeohdpLOw628h1D0t3CA/gTXAefbCG
+        taxp7fzPlB9IPxaxhFMOJGnBFXzGHbTDDGMTr3DCAWLNmgYhPVjAcww6kMRn4CI+4A387kM4i5DCBiFH
+        MIvb+dGfnMYc/B+9cIB4MzTdIM45eLV6hC5sawNztSIkbuAsSzfwH6wQG/zAGubh8xOyLQ285+/hcH5U
+        nZoGPlCuc1HSBkWpadAJH3FvPXfQeinVYBrez8fhtlAvpRoYn96h3x/r5r8auCFt4BLSzS5NIw2sYS1r
+        5pudSbfrv72lihpY2O36K6q26zjumr4GP8GG3udx6jVIzwk7bWF8/XmSL4+78PVo4gatcLbO2sIeNx2n
+        Hb/0b8CiFiz10k8TfrZ8r2jwZ0uWbQHMWGaoPKNWZAAAAABJRU5ErkJggg==
 </value>
   </data>
 </root>
