--- a/QLVanChuyen_App/views/QLKH.resx
+++ b/QLVanChuyen_App/views/QLKH.resx
@@ -224,4 +224,18 @@
         ibWjaqnd5uYQpfe8qnHEDvAnzWs1udwnyAljByH2KK0AAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="btnIn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAAJQAAACUAXm/De8AAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAABo0lEQVRIS6XWzStEURjH8WPK20YzJRuFLG3Iws7exhKlZGmSSWIQY83GhiSMl0hZytZW/gYLpCy8
+        JIliI+P7TGem5565czvGUx+d8zvnnmfcOzONyeVyJagq1P1DdfEsfXA+MGYGN5BJpb6xgyb38G7cokPn
+        vqgLrMr1OEbW3bCCZZ35ohrxiTo7b8W7u2kNSzrzRbXhTc3jKNm0jowddyLpGEVMX1NAeTXYwIIdj+DE
+        sY8GfU0B5dVgE/M680V5NdjCrM58UV4NtpG24yEceOix+70aZDFtx11wH3KYZrtfGnxArhO9KGmwhymd
+        +aKkwQ/ulHN3k/zLkzrzRQVuUTEPTIw5RMqOF6FfTTn9dr9XgyNM2LE8pML9jFJr93s1kC+ocZ35osIb
+        UAm7KM4gt6YwL6cl5CDJQxu84AmPf/CFQeegsg3kb9xdiELJuy3pZJENEu5CFGoXgWdFteNVZzY31xhw
+        F6JQ8jVy6mQpXOrM5iaNK/S5i+VQNXjAHOTtLA3vMRyy18SQwTMkqYR84Mbcw/MNAhNj6hH2MySSPiMo
+        Z34BLhgWv8PbEvYAAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
