--- a/QLVanChuyen_App/views/QLTK.resx
+++ b/QLVanChuyen_App/views/QLTK.resx
@@ -224,4 +224,18 @@
         ibWjaqnd5uYQpfe8qnHEDvAnzWs1udwnyAljByH2KK0AAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="btnIn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        kgAAAJIB+bxJdAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAGjSURBVEhLpdbN
+        K0RRGMfxY8rbRjMlG4UsbcjCzt7GEqVkaZJJYhBjzcaGJIyXSFnK1lb+BgukLLwkiWIj4/tMZ6bnnrlz
+        O8ZTH53zO+eeZ9w7M43J5XIlqCrU/UN18Sx9cD4wZgY3kEmlvrGDJvfwbtyiQ+e+qAusyvU4RtbdsIJl
+        nfmiGvGJOjtvxbu7aQ1LOvNFteFNzeMo2bSOjB13IukYRUxfU0B5NdjAgh2P4MSxjwZ9TQHl1WAT8zrz
+        RXk12MKsznxRXg22kbbjIRx46LH7vRpkMW3HXXAfcphmu18afECuE70oabCHKZ35oqTBD+6Uc3eT/MuT
+        OvNFBW5RMQ9MjDlEyo4XoV9NOf12v1eDI0zYsTykwv2MUmv3ezWQL6hxnfmiwhtQCbsoziC3pjAvpyXk
+        IMlDG7zgCY9/8IVB56CyDeRv3F2IQsm7LelkkQ0S7kIUaheBZ0W141VnNjfXGHAXolDyNXLqZClc6szm
+        Jo0r9LmL5VA1eMAc5O0sDe8xHLLXxJDBMySphHzgxtzD8w0CE2PqEfYzJJI+IyhnfgEuGBa/w9sS9gAA
+        AABJRU5ErkJggg==
+</value>
+  </data>
 </root>
